2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for 'Bug 585454 - Lacking one reference to an enum
	  type'.

2010-03-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Fixed
	  some unit tests

2010-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Added
	  some formatting tests.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Added
	  some tests.

2010-02-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DomPersistenceTests.cs: Added attribute
	  persistence test.

	* TestBase.cs:
	* MonoDevelop.AspNet/AspNetTesting.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Make
	  sure temp file names are unique in all test fixtures.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* Mono.TextEditor.Tests/SyntaxHighlightingTests.cs:
	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs:
	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Fixed
	  some unit tests.

2010-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: added
	  binary expression formatting unit test.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  test for 'Bug 582017 - C# Generic Type Constraints'.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests/SearchTests.cs: Track API changes.

2010-02-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 577225 - Inconsistent autocomplete on
	  returned value of generic method.'.

2010-02-07  Mike Krüger  <mkrueger@novell.com>
