@@ -1,5 +1,10 @@
 2010-03-05  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharpBinding/TestFormattingVisitor.cs: Worked
+	  on unit tests.
+
+2010-03-05  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
 	  test for 'Bug 585454 - Lacking one reference to an enum
 	  type'.
